Closed
Bug 792793
Opened 13 years ago
Closed 13 years ago
Remove growl support from comm-central
Categories
(Thunderbird :: OS Integration, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Thunderbird 19.0
People
(Reporter: florian, Assigned: florian)
References
Details
Attachments
(1 file)
|
7.50 KB,
patch
|
Irving
:
review+
|
Details | Diff | Splinter Review |
Bug 777409 removed growl support, and the comm-central tree is currently busted:
mailnews/base/src/nsMessengerOSXIntegration.mm:40:10: fatal error: 'nsINotificationsList.h' file not found
make[8]: *** [nsMessengerOSXIntegration.o] Error 1
The attached patch removes Growl specific code from mailnews, but keeps the call to nsIAlertsService, as that will use the new notification center on 10.8.
| Assignee | ||
Comment 1•13 years ago
|
||
Comment on attachment 662957 [details] [diff] [review]
Patch
Requesting review from a few people who are currently online. Whoever gets to it first can do it :).
The try server build is green: https://tbpl.mozilla.org/?tree=Thunderbird-Try&rev=ddd216b95ff2
Attachment #662957 -
Flags: review?(mconley)
Attachment #662957 -
Flags: review?(irving)
Comment 2•13 years ago
|
||
Comment on attachment 662957 [details] [diff] [review]
Patch
Removing r? because Irving is awesome and said he'd handle this.
Attachment #662957 -
Flags: review?(mconley)
Comment 3•13 years ago
|
||
Comment on attachment 662957 [details] [diff] [review]
Patch
Review of attachment 662957 [details] [diff] [review]:
-----------------------------------------------------------------
Looks good to me.
Attachment #662957 -
Flags: review?(irving) → review+
| Assignee | ||
Comment 4•13 years ago
|
||
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 18.0
Updated•13 years ago
|
Whiteboard: [relnote = from TB 18]
Comment 5•13 years ago
|
||
Although this landed in TB 18, it was undone by bug 806254, updating flags.
Whiteboard: [relnote = from TB 18] → [relnote = from TB 19]
Target Milestone: Thunderbird 18.0 → Thunderbird 19.0
You need to log in
before you can comment on or make changes to this bug.
Description
•