Bug 792793 - Remove growl support from comm-central, r=irving, a=bustage-fix on CLOSED TREE.